# flags

./: .gitignore  CHANGELOG.md  LICENSE  README.md  TAGS  flags.cabal  flags.cabal~
dist-newstyle/cache/: compiler  config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
example/: Main.hs
src/: #Main.hs#  Flag.hi  Flag.hs  Flag.hs~  Flag2.hi  Flag2.hs  Flag2.hs~  Flag3.hi  Flag3.hs  Flag3.hs~  Main.hi  Main.hs  Main.hs~  Main2.hs
src/Flag/: #Types3.hs#  .#Types3.hs  Types.hi  Types.hs  Types.hs~  Types2.hi  Types2.hs  Types3.hi  Types3.hs  Types3.hs~  Types4.hi  Types4.hs~  Types5.hs  Types5.hs~
src/Internal/: .#Types.hs  Process.hi  Process.hs  Process.hs~  Process2.hs  Process3.hs  Process4.hs  Types.hi  Types.hs  Types.hs~  Types2.hs  Types4.hs~
src/Internal/Process/: Long.hs  Short.hs
