cabal-version:      3.0
name:               flags
version:            0.1.0.0
-- synopsis:
-- description:
license:            BSD-3-Clause
license-file:       LICENSE
author:             max-grek
maintainer:         maximmgrek@gmail.com
-- copyright:
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Flag
    other-modules:    Internal.Types
                      Internal.Types2
                      Internal.Process
                      Internal.Process2
                      Internal.Process3
                      Internal.Process4
    -- other-extensions:
    build-depends:    base ^>=4.18.2.0,
                      unordered-containers,
                      text
                                            
    hs-source-dirs:   src
    default-language: GHC2021

test-suite flags-test
    import:           warnings
    default-language: GHC2021
    -- other-modules:
    -- other-extensions:
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.18.2.0,
        flags
